apps/threadfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: threadfin
  namespace: threadfin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-security-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: threadfin.lunding.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: threadfin-web
            port:
              number: 34400
  tls:
  - hosts:
    - threadfin.lunding.xyz
    secretName: threadfin-lunding-tls
